<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/nome"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtNomeUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:ems="20"
                android:hint="@string/HintNome"
                android:inputType="textPersonName"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Cpf"
                android:textColor="#000000"
                android:textSize="18sp" />

            <com.santalu.maskara.widget.MaskEditText
                android:id="@+id/edtCpfUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hintCPF"
                android:inputType="textPersonName"
                android:textSize="16sp"
                app:mask="___.___.___-__"
                app:maskCharacter="_"
                app:maskStyle="completable"

                />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txtE"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtEmailUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hintEmail"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txtSenha"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtSenhaUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hintSenha"
                android:inputType="textPassword"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txtConfSenha"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtSenhaConfUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/confsenha"
                android:inputType="textPassword"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnCadUser"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btnstelaprincipal"
                android:text="@string/cadd"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>