<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtNomeONG"
                    android:layout_width="202dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/NomeOng"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtAddLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/txtLogo"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtNomeONG"
                    android:layout_width="213dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="30dp"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/hintONG"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textSize="16sp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgHome"
                    android:layout_width="87dp"
                    android:layout_height="80dp"
                    android:layout_gravity="right"
                    android:src="@drawable/add_semborda"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtEmailONG"
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/txtE"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtEmailONG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/emailOng"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtCNPJONG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/txtCnpjOng"
                android:textColor="#000000"
                android:textSize="18sp" />

            <com.santalu.maskara.widget.MaskEditText
                android:id="@+id/edtCNPJONG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/cnpj"
                android:inputType="textPersonName"
                android:textSize="16sp"
                app:mask="__.___.___/0001-__"
                app:maskCharacter="_"
                app:maskStyle="completable"

                />

            <TextView
                android:id="@+id/txtTipoONG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/txtTipo"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtTipoONG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/Tipoo"
                android:inputType="textPersonName"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtUF"
                    android:layout_width="41dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="120dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/txtUF"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtCidade"
                    android:layout_width="202dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/txtCidade"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spUF"
                    android:layout_width="310dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/spinner"
                    android:dropDownSelector="@drawable/ic_baseline_arrow_drop_down_24"
                    android:entries="@array/uf"
                    android:spinnerMode="dropdown" />

                <Spinner
                    android:id="@+id/spCidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/spinner"
                    android:entries="@array/cidade"

                    />


            </LinearLayout>

            <TextView
                android:id="@+id/txtTelONG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/TelONG"
                android:textColor="#000000"
                android:textSize="18sp"

                />

            <com.santalu.maskara.widget.MaskEditText
                android:id="@+id/edtTelONG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/txtTel"
                android:inputType="textPersonName"
                android:textSize="16sp"
                app:mask="(__) ____-____"
                app:maskCharacter="_"
                app:maskStyle="completable" />

            <TextView
                android:id="@+id/txtCelONG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/celOng"
                android:textColor="#000000"
                android:textSize="18sp" />

            <com.santalu.maskara.widget.MaskEditText
                android:id="@+id/edtCelONG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/txtCel"
                android:inputType="phone"
                android:textSize="16sp"
                app:mask="(__) _____-____"
                app:maskCharacter="_"
                app:maskStyle="completable" />

            <TextView
                android:id="@+id/txtSenhaONG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/txtSenha"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtSenhaONG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/hintSenha"
                android:inputType="textPassword"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtConfSenhaONG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/txtConfSenha"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtConfSenhaONG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/edtCSenha"
                android:inputType="textPassword"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnCadONG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btnstelaprincipal"
                android:fontFamily="@font/roboto"
                android:text="Cadastrar"
                android:textSize="20sp" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>