<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.tcc_abcancer.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_buscar"
        android:name="com.example.tcc_abcancer.ui.busca.BuscarFragment"
        android:label="@string/title_buscar"
        tools:layout="@layout/fragment_buscar" />

    <fragment
        android:id="@+id/navigation_mais"
        android:name="com.example.tcc_abcancer.ui.mais.MaisFragment"
        android:label="@string/title_mais"
        tools:layout="@layout/fragment_mais" />
    <fragment
        android:id="@+id/navigation_campanha"
        android:name="com.example.tcc_abcancer.ui.campanha.CampanhaFragment"
        android:label="Campanhas"
        tools:layout="@layout/fragment_campanha" />
</navigation>